# deprecated-openshift-haskell-api

./: .gitignore  Makefile  README.md  openshift-v1-rest.cabal  stack.yaml
example/: Main.hs  example.cabal  stack.yaml
kubernetes/: Makefile  kubernetes-v1-rest.cabal
kubernetes/lib/Kubernetes/: Apis.hs  ApivApi.hs  Integer.hs  Utils.hs
kubernetes/lib/Kubernetes/Json/: WatchEvent.hs
kubernetes/lib/Kubernetes/Unversioned/: ListMeta.hs  Patch.hs  Status.hs  StatusCause.hs  StatusDetails.hs
kubernetes/lib/Kubernetes/V1/: AWSElasticBlockStoreVolumeSource.hs  Binding.hs  Capabilities.hs  Capability.hs  CephFSVolumeSource.hs  CinderVolumeSource.hs  ComponentCondition.hs  ComponentStatus.hs  ComponentStatusList.hs  Container.hs  ContainerPort.hs  ContainerState.hs  ContainerStateRunning.hs  ContainerStateTerminated.hs  ContainerStateWaiting.hs  ContainerStatus.hs  DeleteOptions.hs  DownwardAPIVolumeFile.hs  DownwardAPIVolumeSource.hs  EmptyDirVolumeSource.hs  EndpointAddress.hs  EndpointPort.hs  EndpointSubset.hs  Endpoints.hs  EndpointsList.hs  EnvVar.hs  EnvVarSource.hs  Event.hs  EventList.hs  EventSource.hs  ExecAction.hs  FCVolumeSource.hs  FSGroupStrategyOptions.hs  FinalizerName.hs  FlockerVolumeSource.hs  GCEPersistentDiskVolumeSource.hs  GitRepoVolumeSource.hs  GlusterfsVolumeSource.hs  HTTPGetAction.hs  Handler.hs  (+79 more)
kubernetes/scripts/: Any.hs  codegen.config  codegen.sh
kubernetes/scripts/V1/: DaemonEndpoint.hs
lib/Openshift/: Apis.hs  Integer.hs  OapivApi.hs
lib/Openshift/Json/: WatchEvent.hs
lib/Openshift/Patch/: Object.hs
lib/Openshift/Unversioned/: ListMeta.hs  Patch.hs  Status.hs  StatusCause.hs  StatusDetails.hs
lib/Openshift/V1/: #Build.hs#  AWSElasticBlockStoreVolumeSource.hs  BinaryBuildSource.hs  Build.hs  BuildConfig.hs  BuildConfigList.hs  BuildConfigSpec.hs  BuildList.hs  BuildLog.hs  BuildRequest.hs  BuildSource.hs  BuildSpec.hs  BuildStatus.hs  BuildStrategy.hs  BuildTriggerPolicy.hs  Capabilities.hs  CephFSVolumeSource.hs  CinderVolumeSource.hs  ClusterNetwork.hs  ClusterNetworkList.hs  ClusterPolicy.hs  ClusterPolicyBinding.hs  ClusterPolicyBindingList.hs  ClusterPolicyList.hs  ClusterRole.hs  ClusterRoleBinding.hs  ClusterRoleBindingList.hs  ClusterRoleList.hs  Container.hs  ContainerPort.hs  CustomBuildStrategy.hs  CustomDeploymentStrategyParams.hs  DeleteOptions.hs  DeploymentCause.hs  DeploymentCauseImageTrigger.hs  DeploymentConfig.hs  DeploymentConfigList.hs  DeploymentConfigRollback.hs  DeploymentConfigRollbackSpec.hs  DeploymentConfigSpec.hs  (+123 more)
lib/Openshift/V1beta1/: Scale.hs  ScaleSpec.hs
openshift/: openshift-v1-rest.cabal
openshift/lib/Openshift/: ClientUtils.hs  Utils.hs
openshift/lib/Openshift/Json/: WatchEvent.hs
openshift/lib/Openshift/Patch/: Object.hs
openshift/lib/Openshift/Runtime/: RawExtension.hs
openshift/lib/Openshift/Unversioned/: ListMeta.hs  Patch.hs  Status.hs  StatusCause.hs  StatusDetails.hs
openshift/lib/Openshift/V1/: AWSElasticBlockStoreVolumeSource.hs  BinaryBuildSource.hs  Build.hs  BuildConfig.hs  BuildConfigList.hs  BuildConfigSpec.hs  BuildConfigStatus.hs  BuildList.hs  BuildLog.hs  BuildOutput.hs  BuildRequest.hs  BuildSource.hs  BuildSpec.hs  BuildStatus.hs  BuildStrategy.hs  BuildTriggerPolicy.hs  Capabilities.hs  Capability.hs  CephFSVolumeSource.hs  CinderVolumeSource.hs  ClusterNetwork.hs  ClusterNetworkList.hs  ClusterPolicy.hs  ClusterPolicyBinding.hs  ClusterPolicyBindingList.hs  ClusterPolicyList.hs  ClusterRole.hs  ClusterRoleBinding.hs  ClusterRoleBindingList.hs  ClusterRoleList.hs  Container.hs  ContainerPort.hs  CustomBuildStrategy.hs  CustomDeploymentStrategyParams.hs  DeleteOptions.hs  DeploymentCause.hs  DeploymentCauseImageTrigger.hs  DeploymentConfig.hs  DeploymentConfigList.hs  DeploymentConfigRollback.hs  (+136 more)
openshift/lib/Openshift/V1beta1/: Scale.hs  ScaleSpec.hs  ScaleStatus.hs
openshift/scripts/: ClientUtils.hs  codegen.sh  stack.yaml
scripts/: Any.hs  codegen.config  codegen.sh
