Name:                example
Version:             0.1
cabal-version:       >=1.10
build-type:          Simple
                     
executable example-openshift-client                     
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , classy-prelude
                     , either
                     , data-default
                     , aeson
                     , connection
                     , http-client
                     , http-client-tls
                     , transformers
                     , split
                     , network-uri
                     , servant
                     , servant-client
                     , text
                     , openshift-v1-rest
                     , kubernetes-v1-rest
  default-language:    Haskell2010
  default-extensions: NoImplicitPrelude,
                      OverloadedStrings
