name:                kubernetes-v1-rest
version:             0.1.0.0
synopsis:            Swagger-codegen example for kubernetes-v1-rest
description:         Please see README.md
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      lib
  exposed-modules:   Kubernetes.Utils,
                     Kubernetes.Apis 
                     , Kubernetes.V1.AWSElasticBlockStoreVolumeSource
                     , Kubernetes.V1.Binding
                     , Kubernetes.V1.Capabilities
                     , Kubernetes.V1.Capability
                     , Kubernetes.V1.CephFSVolumeSource
                     , Kubernetes.V1.CinderVolumeSource
                     , Kubernetes.V1.ComponentCondition
                     , Kubernetes.V1.ComponentStatus
                     , Kubernetes.V1.ComponentStatusList
                     , Kubernetes.V1.Container
                     , Kubernetes.V1.ContainerPort
                     , Kubernetes.V1.ContainerState
                     , Kubernetes.V1.ContainerStateRunning
                     , Kubernetes.V1.ContainerStateTerminated
                     , Kubernetes.V1.ContainerStateWaiting
                     , Kubernetes.V1.ContainerStatus
                     , Kubernetes.V1.DaemonEndpoint
                     , Kubernetes.V1.DeleteOptions
                     , Kubernetes.V1.DownwardAPIVolumeFile
                     , Kubernetes.V1.DownwardAPIVolumeSource
                     , Kubernetes.V1.EmptyDirVolumeSource
                     , Kubernetes.V1.EndpointAddress
                     , Kubernetes.V1.EndpointPort
                     , Kubernetes.V1.EndpointSubset
                     , Kubernetes.V1.Endpoints
                     , Kubernetes.V1.EndpointsList
                     , Kubernetes.V1.EnvVar
                     , Kubernetes.V1.EnvVarSource
                     , Kubernetes.V1.Event
                     , Kubernetes.V1.EventList
                     , Kubernetes.V1.EventSource
                     , Kubernetes.V1.ExecAction
                     , Kubernetes.V1.FCVolumeSource
                     , Kubernetes.V1.FSGroupStrategyOptions
                     , Kubernetes.V1.FinalizerName
                     , Kubernetes.V1.FlockerVolumeSource
                     , Kubernetes.V1.GCEPersistentDiskVolumeSource
                     , Kubernetes.V1.GitRepoVolumeSource
                     , Kubernetes.V1.GlusterfsVolumeSource
                     , Kubernetes.V1.HTTPGetAction
                     , Kubernetes.V1.Handler
                     , Kubernetes.V1.HostPathVolumeSource
                     , Kubernetes.V1.IDRange
                     , Kubernetes.V1.ISCSIVolumeSource
                     , Kubernetes.Integer
                     , Kubernetes.V1.Lifecycle
                     , Kubernetes.V1.LimitRange
                     , Kubernetes.V1.LimitRangeItem
                     , Kubernetes.V1.LimitRangeList
                     , Kubernetes.V1.LimitRangeSpec
                     , Kubernetes.Unversioned.ListMeta
                     , Kubernetes.V1.LoadBalancerIngress
                     , Kubernetes.V1.LoadBalancerStatus
                     , Kubernetes.V1.LocalObjectReference
                     , Kubernetes.V1.MetadataFile
                     , Kubernetes.V1.MetadataVolumeSource
                     , Kubernetes.V1.NFSVolumeSource
                     , Kubernetes.V1.Namespace
                     , Kubernetes.V1.NamespaceList
                     , Kubernetes.V1.NamespaceSpec
                     , Kubernetes.V1.NamespaceStatus
                     , Kubernetes.V1.Node
                     , Kubernetes.V1.NodeAddress
                     , Kubernetes.V1.NodeCondition
                     , Kubernetes.V1.NodeDaemonEndpoints
                     , Kubernetes.V1.NodeList
                     , Kubernetes.V1.NodeSpec
                     , Kubernetes.V1.NodeStatus
                     , Kubernetes.V1.NodeSystemInfo
                     , Kubernetes.V1.ObjectFieldSelector
                     , Kubernetes.V1.ObjectMeta
                     , Kubernetes.V1.ObjectReference
                     , Kubernetes.Unversioned.Patch
                     , Kubernetes.V1.PersistentVolume
                     , Kubernetes.V1.PersistentVolumeAccessMode
                     , Kubernetes.V1.PersistentVolumeClaim
                     , Kubernetes.V1.PersistentVolumeClaimList
                     , Kubernetes.V1.PersistentVolumeClaimSpec
                     , Kubernetes.V1.PersistentVolumeClaimStatus
                     , Kubernetes.V1.PersistentVolumeClaimVolumeSource
                     , Kubernetes.V1.PersistentVolumeList
                     , Kubernetes.V1.PersistentVolumeSpec
                     , Kubernetes.V1.PersistentVolumeStatus
                     , Kubernetes.V1.Pod
                     , Kubernetes.V1.PodCondition
                     , Kubernetes.V1.PodList
                     , Kubernetes.V1.PodSecurityContext
                     , Kubernetes.V1.PodSpec
                     , Kubernetes.V1.PodStatus
                     , Kubernetes.V1.PodTemplate
                     , Kubernetes.V1.PodTemplateList
                     , Kubernetes.V1.PodTemplateSpec
                     , Kubernetes.V1.Probe
                     , Kubernetes.V1.RBDVolumeSource
                     , Kubernetes.V1.ReplicationController
                     , Kubernetes.V1.ReplicationControllerList
                     , Kubernetes.V1.ReplicationControllerSpec
                     , Kubernetes.V1.ReplicationControllerStatus
                     , Kubernetes.V1.ResourceQuota
                     , Kubernetes.V1.ResourceQuotaList
                     , Kubernetes.V1.ResourceQuotaSpec
                     , Kubernetes.V1.ResourceQuotaStatus
                     , Kubernetes.V1.ResourceRequirements
                     , Kubernetes.V1.RunAsUserStrategyOptions
                     , Kubernetes.V1.SELinuxContextStrategyOptions
                     , Kubernetes.V1.SELinuxOptions
                     , Kubernetes.V1.Secret
                     , Kubernetes.V1.SecretList
                     , Kubernetes.V1.SecretVolumeSource
                     , Kubernetes.V1.SecurityContext
                     , Kubernetes.V1.SecurityContextConstraints
                     , Kubernetes.V1.SecurityContextConstraintsList
                     , Kubernetes.V1.Service
                     , Kubernetes.V1.ServiceAccount
                     , Kubernetes.V1.ServiceAccountList
                     , Kubernetes.V1.ServiceList
                     , Kubernetes.V1.ServicePort
                     , Kubernetes.V1.ServiceSpec
                     , Kubernetes.V1.ServiceStatus
                     , Kubernetes.Unversioned.Status
                     , Kubernetes.Unversioned.StatusCause
                     , Kubernetes.Unversioned.StatusDetails
                     , Kubernetes.V1.SupplementalGroupsStrategyOptions
                     , Kubernetes.V1.TCPSocketAction
                     , Kubernetes.V1.Volume
                     , Kubernetes.V1.VolumeMount
                     , Kubernetes.Json.WatchEvent
                     , Kubernetes.ApivApi, Kubernetes.Any
  ghc-options:         -Wall
  build-depends:       base
                     , aeson
                     , http-client
                     , text
                     , split
                     , containers
                     , mtl
                     , network-uri
                     , QuickCheck
                     , servant
                     , servant-client, aeson-casing
  default-language:    Haskell2010
