name:                openshift-v1-rest
version:             0.1.0.0
synopsis:            Swagger-codegen example for openshift-v1-rest
description:         Please see README.md
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      lib
  exposed-modules:   Openshift.Utils,
                     Openshift.Apis 
                     , Openshift.V1.AWSElasticBlockStoreVolumeSource
                     , Openshift.V1.BinaryBuildSource
                     , Openshift.V1.Build
                     , Openshift.V1.BuildConfig
                     , Openshift.V1.BuildConfigList
                     , Openshift.V1.BuildConfigSpec
                     , Openshift.V1.BuildConfigStatus
                     , Openshift.V1.BuildList
                     , Openshift.V1.BuildLog
                     , Openshift.V1.BuildOutput
                     , Openshift.V1.BuildRequest
                     , Openshift.V1.BuildSource
                     , Openshift.V1.BuildSpec
                     , Openshift.V1.BuildStatus
                     , Openshift.V1.BuildStrategy
                     , Openshift.V1.BuildTriggerPolicy
                     , Openshift.V1.Capabilities
                     , Openshift.V1.Capability
                     , Openshift.V1.CephFSVolumeSource
                     , Openshift.V1.CinderVolumeSource
                     , Openshift.V1.ClusterNetwork
                     , Openshift.V1.ClusterNetworkList
                     , Openshift.V1.ClusterPolicy
                     , Openshift.V1.ClusterPolicyBinding
                     , Openshift.V1.ClusterPolicyBindingList
                     , Openshift.V1.ClusterPolicyList
                     , Openshift.V1.ClusterRole
                     , Openshift.V1.ClusterRoleBinding
                     , Openshift.V1.ClusterRoleBindingList
                     , Openshift.V1.ClusterRoleList
                     , Openshift.V1.Container
                     , Openshift.V1.ContainerPort
                     , Openshift.V1.CustomBuildStrategy
                     , Openshift.V1.CustomDeploymentStrategyParams
                     , Openshift.V1.DeleteOptions
                     , Openshift.V1.DeploymentCause
                     , Openshift.V1.DeploymentCauseImageTrigger
                     , Openshift.V1.DeploymentConfig
                     , Openshift.V1.DeploymentConfigList
                     , Openshift.V1.DeploymentConfigRollback
                     , Openshift.V1.DeploymentConfigRollbackSpec
                     , Openshift.V1.DeploymentConfigSpec
                     , Openshift.V1.DeploymentConfigStatus
                     , Openshift.V1.DeploymentDetails
                     , Openshift.V1.DeploymentLog
                     , Openshift.V1.DeploymentStrategy
                     , Openshift.V1.DeploymentTriggerImageChangeParams
                     , Openshift.V1.DeploymentTriggerPolicy
                     , Openshift.V1.DockerBuildStrategy
                     , Openshift.V1.DownwardAPIVolumeFile
                     , Openshift.V1.DownwardAPIVolumeSource
                     , Openshift.V1.EmptyDirVolumeSource
                     , Openshift.V1.EnvVar
                     , Openshift.V1.EnvVarSource
                     , Openshift.V1.ExecAction
                     , Openshift.V1.ExecNewPodHook
                     , Openshift.V1.FCVolumeSource
                     , Openshift.V1.FinalizerName
                     , Openshift.V1.FlockerVolumeSource
                     , Openshift.V1.GCEPersistentDiskVolumeSource
                     , Openshift.V1.GitBuildSource
                     , Openshift.V1.GitRepoVolumeSource
                     , Openshift.V1.GitSourceRevision
                     , Openshift.V1.GlusterfsVolumeSource
                     , Openshift.V1.Group
                     , Openshift.V1.GroupList
                     , Openshift.V1.HTTPGetAction
                     , Openshift.V1.Handler
                     , Openshift.V1.HostPathVolumeSource
                     , Openshift.V1.HostSubnet
                     , Openshift.V1.HostSubnetList
                     , Openshift.V1.ISCSIVolumeSource
                     , Openshift.V1.Identity
                     , Openshift.V1.IdentityList
                     , Openshift.V1.Image
                     , Openshift.V1.ImageChangeTrigger
                     , Openshift.V1.ImageImportSpec
                     , Openshift.V1.ImageImportStatus
                     , Openshift.V1.ImageLayer
                     , Openshift.V1.ImageList
                     , Openshift.V1.ImageSource
                     , Openshift.V1.ImageSourcePath
                     , Openshift.V1.ImageStream
                     , Openshift.V1.ImageStreamImage
                     , Openshift.V1.ImageStreamImport
                     , Openshift.V1.ImageStreamImportSpec
                     , Openshift.V1.ImageStreamImportStatus
                     , Openshift.V1.ImageStreamList
                     , Openshift.V1.ImageStreamMapping
                     , Openshift.V1.ImageStreamSpec
                     , Openshift.V1.ImageStreamStatus
                     , Openshift.V1.ImageStreamTag
                     , Openshift.V1.ImageStreamTagList
                     , Openshift.Integer
                     , Openshift.V1.Lifecycle
                     , Openshift.V1.LifecycleHook
                     , Openshift.Unversioned.ListMeta
                     , Openshift.V1.LocalObjectReference
                     , Openshift.V1.LocalResourceAccessReview
                     , Openshift.V1.LocalSubjectAccessReview
                     , Openshift.V1.MetadataFile
                     , Openshift.V1.MetadataVolumeSource
                     , Openshift.V1.NFSVolumeSource
                     , Openshift.V1.NamedClusterRole
                     , Openshift.V1.NamedClusterRoleBinding
                     , Openshift.V1.NamedRole
                     , Openshift.V1.NamedRoleBinding
                     , Openshift.V1.NamedTagEventList
                     , Openshift.V1.NetNamespace
                     , Openshift.V1.NetNamespaceList
                     , Openshift.V1.OAuthAccessToken
                     , Openshift.V1.OAuthAccessTokenList
                     , Openshift.V1.OAuthAuthorizeToken
                     , Openshift.V1.OAuthAuthorizeTokenList
                     , Openshift.V1.OAuthClient
                     , Openshift.V1.OAuthClientAuthorization
                     , Openshift.V1.OAuthClientAuthorizationList
                     , Openshift.V1.OAuthClientList
                     , Openshift.Patch.Object
                     , Openshift.V1.ObjectFieldSelector
                     , Openshift.V1.ObjectMeta
                     , Openshift.V1.ObjectReference
                     , Openshift.V1.Parameter
                     , Openshift.Unversioned.Patch
                     , Openshift.V1.PersistentVolumeClaimVolumeSource
                     , Openshift.V1.PodSecurityContext
                     , Openshift.V1.PodSpec
                     , Openshift.V1.PodTemplateSpec
                     , Openshift.V1.Policy
                     , Openshift.V1.PolicyBinding
                     , Openshift.V1.PolicyBindingList
                     , Openshift.V1.PolicyList
                     , Openshift.V1.PolicyRule
                     , Openshift.V1.Probe
                     , Openshift.V1.Project
                     , Openshift.V1.ProjectList
                     , Openshift.V1.ProjectRequest
                     , Openshift.V1.ProjectSpec
                     , Openshift.V1.ProjectStatus
                     , Openshift.V1.RBDVolumeSource
                     , Openshift.Runtime.RawExtension
                     , Openshift.V1.RecreateDeploymentStrategyParams
                     , Openshift.V1.RepositoryImportSpec
                     , Openshift.V1.RepositoryImportStatus
                     , Openshift.V1.ResourceAccessReview
                     , Openshift.V1.ResourceRequirements
                     , Openshift.V1.Role
                     , Openshift.V1.RoleBinding
                     , Openshift.V1.RoleBindingList
                     , Openshift.V1.RoleList
                     , Openshift.V1.RollingDeploymentStrategyParams
                     , Openshift.V1.Route
                     , Openshift.V1.RouteList
                     , Openshift.V1.RoutePort
                     , Openshift.V1.RouteSpec
                     , Openshift.V1.RouteStatus
                     , Openshift.V1.SELinuxOptions
                     , Openshift.V1beta1.Scale
                     , Openshift.V1beta1.ScaleSpec
                     , Openshift.V1beta1.ScaleStatus
                     , Openshift.V1.Secret
                     , Openshift.V1.SecretBuildSource
                     , Openshift.V1.SecretList
                     , Openshift.V1.SecretSpec
                     , Openshift.V1.SecretVolumeSource
                     , Openshift.V1.SecurityContext
                     , Openshift.V1.SourceBuildStrategy
                     , Openshift.V1.SourceControlUser
                     , Openshift.V1.SourceRevision
                     , Openshift.Unversioned.Status
                     , Openshift.Unversioned.StatusCause
                     , Openshift.Unversioned.StatusDetails
                     , Openshift.V1.SubjectAccessReview
                     , Openshift.V1.TCPSocketAction
                     , Openshift.V1.TLSConfig
                     , Openshift.V1.TagEvent
                     , Openshift.V1.TagEventCondition
                     , Openshift.V1.TagImportPolicy
                     , Openshift.V1.TagReference
                     , Openshift.V1.Template
                     , Openshift.V1.TemplateList
                     , Openshift.V1.User
                     , Openshift.V1.UserIdentityMapping
                     , Openshift.V1.UserList
                     , Openshift.V1.Volume
                     , Openshift.V1.VolumeMount
                     , Openshift.Json.WatchEvent
                     , Openshift.V1.WebHookTrigger
                     , Openshift.OapivApi, Openshift.ClientUtils, Openshift.Any
  ghc-options:         -Wall
  build-depends:       base
                     , aeson
                     , http-client
                     , text
                     , split
                     , containers
                     , mtl
                     , network-uri
                     , QuickCheck
                     , servant
                     , servant-client, http-client-tls, connection, transformers, kubernetes-v1-rest
  default-language:    Haskell2010
